# apk-editor-studio

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  AUTHORS.md  CMakeLists.txt  COMPILATION.md  README.md  apk-editor-studio.pro  appveyor.yml  deploy.pri
.github/: FUNDING.yml
.github/workflows/: build.yml
lib/DarkStyle/: DarkStyle.cpp  DarkStyle.h
lib/KSyntaxHighlighting/: CMakeLists.txt  README.md
lib/QtKeychain/: CMakeLists.txt  QtKeychainConfig.cmake.in  keychain.h  keychain_apple.mm  keychain_p.h  keychain_unix.cpp  keychain_win.cpp  libsecret.cpp
lib/SingleApplication/: README.md  singleapplication.cpp  singleapplication_p.cpp  singleapplication_p.h
lib/qtkeychain/: .gitignore  CMakeLists.txt  ChangeLog  QtKeychainConfig.cmake.in  appveyor.yml  appveyorHelp.psm1  gnomekeyring.cpp  keychain.h  keychain_mac.cpp  keychain_p.h  keychain_unix.cpp  keychain_win.cpp  kwallet_interface.cpp  kwallet_interface.h  libsecret.cpp  qt5keychain.pri  testclient.cpp
lib/qtkeychain/cmake/Modules/: ECMPackageConfigHelpers.cmake  ECMQueryQmake.cmake  ECMSetupVersion.cmake
lib/qtkeychain/translations/: qtkeychain_de.ts  qtkeychain_ro.ts
lib/qtsingleapplication/: common.pri
res/translations/: apk-editor-studio.de.ts  apk-editor-studio.el.ts  apk-editor-studio.es.ts  apk-editor-studio.fr.ts  apk-editor-studio.ja.ts  apk-editor-studio.pl.ts  apk-editor-studio.pt.ts  apk-editor-studio.ro.ts  apk-editor-studio.ru.ts  apk-editor-studio.tr.ts
scripts/: download.py  git-archive-all.sh
scripts/linux/: Vagrantfile  environment.sh
scripts/macos/: environment.sh
scripts/win32/: deploy.bat  environment.bat
src/: CMakeLists.txt  apk-editor-studio.pri  windows.rc.in
src/apk/: apk.pri  apkcloner.cpp  apkcloner.h  filesystemmodel.cpp  filesystemmodel.h  iconitemsmodel.cpp  iconitemsmodel.h  iconsproxy.cpp  iconsproxy.h  iresourceitemsmodel.h  logentry.cpp  logentry.h  logmodel.cpp  logmodel.h  manifest.cpp  manifest.h  manifestattribute.cpp  manifestattribute.h  manifestmodel.cpp  manifestmodel.h  manifestscope.cpp  manifestscope.h  package.cpp  package.h  packagelistmodel.cpp  packagelistmodel.h  packagestate.cpp  packagestate.h  permission.cpp  permission.h  project.cpp  project.h  projectitemsmodel.cpp  projectitemsmodel.h  projectsmodel.cpp  projectsmodel.h  projectstate.cpp  projectstate.h  resourcefile.cpp  resourcefile.h  (+20 more)
src/base/: actionprovider.cpp  actionprovider.h  androidfilesystemitem.cpp  androidfilesystemitem.h  androidfilesystemmodel.cpp  androidfilesystemmodel.h  apktoolupdateinfo.cpp  apktoolupdateinfo.h  application.cpp  application.h  applicationupdateinfo.cpp  applicationupdateinfo.h  base.pri  clipboard.h  command.cpp  command.h  debug.h  device.cpp  device.h  deviceitemsmodel.cpp  deviceitemsmodel.h  devicesmodel.cpp  devicesmodel.h  emptyitemproxymodel.cpp  emptyitemproxymodel.h  extralistitemproxy.cpp  extralistitemproxy.h  fileassociation.cpp  fileassociation.h  fileformat.cpp  fileformat.h  fileformatlist.cpp  fileformatlist.h  formats.cpp  formats.h  iconprovider.cpp  iconprovider.h  iupdateinfo.cpp  iupdateinfo.h  jarprocess.cpp  (+39 more)
src/editors/: actionviewer.cpp  actionviewer.h  baseeditor.cpp  baseeditor.h  codeeditor.cpp  codeeditor.h  editor.cpp  editor.h  fileeditor.cpp  fileeditor.h  imageeditor.cpp  imageeditor.h  projectactionviewer.cpp  projectactionviewer.h  projectmanager.cpp  projectmanager.h  projectviewer.cpp  projectviewer.h  propertyeditor.cpp  propertyeditor.h  quicktab.cpp  quicktab.h  saveableeditor.cpp  saveableeditor.h  titleeditor.cpp  titleeditor.h  viewer.cpp  viewer.h  welcomeactionviewer.cpp  welcomeactionviewer.h  welcometab.cpp  welcometab.h  welcomeviewer.cpp  welcomeviewer.h
src/icons/: icons.qrc
src/sheets/: baseactionsheet.cpp  baseactionsheet.h  baseeditablesheet.cpp  baseeditablesheet.h  basefilesheet.cpp  basefilesheet.h  basesheet.cpp  basesheet.h  codesheet.cpp  codesheet.h  imagesheet.cpp  imagesheet.h  projectsheet.cpp  projectsheet.h  searchsheet.cpp  searchsheet.h  titlesheet.cpp  titlesheet.h  welcomesheet.cpp  welcomesheet.h
src/tools/: adb.cpp  adb.h  apksigner.cpp  apksigner.h  apktool.cpp  apktool.h  command.h  executable.cpp  executable.h  jar.cpp  jar.h  java.cpp  java.h  javac.cpp  javac.h  keystore.cpp  keystore.h  keytool.cpp  keytool.h  tools.h  tools.pri  which.cpp  which.h  zipalign.cpp  zipalign.h
src/translations/: README.md  apk-editor-studio.ar.ts  apk-editor-studio.az.ts  apk-editor-studio.bqi.ts  apk-editor-studio.ckb.ts  apk-editor-studio.cs.ts  apk-editor-studio.de.ts  apk-editor-studio.el.ts  apk-editor-studio.en_GB.ts  apk-editor-studio.es.ts  apk-editor-studio.es_MX.ts  apk-editor-studio.fa.ts  apk-editor-studio.fr.ts  apk-editor-studio.he.ts  apk-editor-studio.hu.ts  apk-editor-studio.id.ts  apk-editor-studio.it.ts  apk-editor-studio.ja.ts  apk-editor-studio.ko.ts  apk-editor-studio.pl.ts  apk-editor-studio.pt.ts  apk-editor-studio.ro.ts  apk-editor-studio.ru.ts  apk-editor-studio.sv.ts  apk-editor-studio.tr.ts  apk-editor-studio.uk.ts  apk-editor-studio.vi.ts  apk-editor-studio.zh_CN.ts  translations.pri
src/widgets/: buttondelegate.cpp  buttondelegate.h  centralwidget.cpp  centralwidget.h  codeeditor.cpp  codeeditor.h  codesearchbar.cpp  codesearchbar.h  codesidebar.cpp  codesidebar.h  decorationdelegate.cpp  decorationdelegate.h  decorationsizedelegate.cpp  decorationsizedelegate.h  deselectablelistview.cpp  deselectablelistview.h  editors.h  elidedlabel.cpp  elidedlabel.h  filebox.cpp  filebox.h  filesystemtree.cpp  filesystemtree.h  gradientwidget.cpp  gradientwidget.h  iconlist.cpp  iconlist.h  itembuttondelegate.cpp  itembuttondelegate.h  loadingwidget.cpp  loadingwidget.h  logdelegate.cpp  logdelegate.h  logview.cpp  logview.h  manifestview.cpp  manifestview.h  packagelist.cpp  packagelist.h  packagelistitemdelegate.cpp  (+42 more)
src/windows/: aboutdialog.cpp  aboutdialog.h  androidexplorer.cpp  androidexplorer.h  devicemanager.cpp  devicemanager.h  dialogs.cpp  dialogs.h  downloader.cpp  downloader.h  frameworkmanager.cpp  frameworkmanager.h  keycreator.cpp  keycreator.h  (+31 more)
(+42 files in other folders)
